examples/cafe-example/eppinvalidservice.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-for-invalid-epp-pool
  namespace: gateway-conformance-app-backend
spec:
  parentRefs:
  - name: conformance-primary
    namespace: gateway-conformance-infra
  rules:
  - backendRefs:
    - name: pool-with-invalid-epp
      kind: InferencePool
      group: inference.networking.k8s.io
    matches:
    - path:
        type: PathPrefix
        value: /invalid-epp-test
